--- a/code/user/gcc/Makefile
+++ b/code/user/gcc/Makefile
@@ -30,8 +30,11 @@ SRC_FILES += \
               $(SDK_ROOT)/components/modules/platform/source/app_boot_vectors.c \
               $(SDK_ROOT)/components/modules/patch/patch.c \
               $(USER_DIR)/init/app_init.c \
-              $(USER_DIR)/common/comm_interface.c \
-              $(USER_DIR)/app_task/task_time_slice.c 
+              $(USER_DIR)/task/app_task.c \
+              $(USER_DIR)/common/others/app_common.c \
+              $(USER_DIR)/common/ring_buffer/ring_buffer.c \
+              $(USER_DIR)/ble_related/ble_protocol.c \
+              $(USER_DIR)/ble_related/ble_service.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
@@ -48,8 +51,10 @@ INC_FOLDERS += \
   $(SDK_ROOT)/components/ble/profiles/ble_simple_profile \
   $(PROJ_DIR) \
   $(USER_DIR)/init \
-  $(USER_DIR)/common \
-  $(USER_DIR)/app_task
+  $(USER_DIR)/task \
+  $(USER_DIR)/common/others \
+  $(USER_DIR)/common/ring_buffer \
+  $(USER_DIR)/ble_related
 
 
 # Libraries common to all targets
